--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,12 @@
             <version>2.3.0-jaxb-1.0.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
 
 
     </dependencies>
